k8s/go-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-worker
  template:
    metadata:
      labels:
        app: go-worker
    spec:
      containers:
      - name: go-worker
        image: pulseguardacr220235236.azurecr.io/pulse-guard-go-worker:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5002

        readinessProbe:
          httpGet:
            path: /health
            port: 5002
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 3

        livenessProbe:
          httpGet:
            path: /health
            port: 5002
          initialDelaySeconds: 15
          periodSeconds: 30
          timeoutSeconds: 3
          failureThreshold: 3

        volumeMounts:
        - name: uploads
          mountPath: /app/uploads

      volumes:
      - name: uploads
        persistentVolumeClaim:
          claimName: uploads-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: go-worker
spec:
  selector:
    app: go-worker
  ports:
  - port: 5002
    targetPort: 5002
  type: ClusterIP
