k8s/osrm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: osrm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: osrm
  template:
    metadata:
      labels:
        app: osrm
    spec:
      containers:
      - name: osrm
        image: pulseguardacr220235236.azurecr.io/osrm-capetown:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: osrm
spec:
  selector:
    app: osrm
  ports:
  - port: 5000
    targetPort: 5000
  type: ClusterIP
